[package]
name = "amba"
version = "0.1.0"
edition = "2021"
publish = false # We distribute using nix, not cargo
repository = "https://github.com/lokegustafsson/amba"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "4"
include_dir = "0.7"
nix = "0.26"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "cookies", "brotli", "rustls-tls", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tera = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
xz2 = "0.1"
