[package]
name = "data-structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
fastrand = "1"
glam = "0.23"
ipc = { path = "../ipc" }
itertools = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
