[package]
name = "graphui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
eframe = { version = "0.21", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.21"
emath = "0.21"
fastrand = "1"
glam = "0.23"
rayon = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
data-structures = { path = "../data-structures" }
