[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.8", default-features = false, features = [ "union", "const_generics", "const_new", "write", "serde" ] }
tracing = "0.1"
