[package]
name = "libamba-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "amba_rs"
crate-type = [ "staticlib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
itertools = "0.10"

[dev-dependencies]
proptest = "1"
