[package]
name = "libamba-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "amba_rs"
crate-type = [ "staticlib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.1.0"

[profile.test]
opt-level = 3               # Use slightly better optimizations.
debug-assertions = true
overflow-checks = true
