[package]
name = "libamba-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "amba_rs"
crate-type = [ "staticlib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { path = "../ipc" }
data-structures = { path = "../data-structures" }

[dev-dependencies]
proptest = "1"
