[package]
name = "libamba"
version = "0.1.0"
edition = "2021"

[lib]
name = "amba"
crate-type = [ "staticlib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
data-structures = { path = "../data-structures" }
ipc = { path = "../ipc" }
