[package]
name = "s2e"
version = "0.1.0"
edition = "2021"
publish = false # We distribute using nix, not cargo
repository = "https://github.com/lokegustafsson/amba"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.24"
cxx = "1.0"

[build-dependencies]
autocxx-build = "0.24"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
cc = { version = "1.0" }
