[package]
name = "s2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = { git = "https://github.com/SKyletoft/autocxx" }
cxx = "1.0"

[build-dependencies]
autocxx-build = { git = "https://github.com/SKyletoft/autocxx" }
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
cc = { version = "1.0" }
